--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="5.0.5" />
+    <PackageReference Include="NHibernate" Version="5.3.8" />
   </ItemGroup>
 
   <ItemGroup>
