--- a/API/API.csproj
+++ b/API/API.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="5.0.5" />
     <PackageReference Include="NHibernate" Version="5.3.8" />
+    <PackageReference Include="Npgsql" Version="5.0.4" />
   </ItemGroup>
 
   <ItemGroup>
