--- a/API/API.csproj
+++ b/API/API.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="5.0.5" />
     <PackageReference Include="NHibernate" Version="5.3.8" />
     <PackageReference Include="Npgsql" Version="5.0.4" />
+    <PackageReference Include="NHibernate.NetCore" Version="5.0.6" />
   </ItemGroup>
 
   <ItemGroup>
