--- a/API/API.csproj
+++ b/API/API.csproj
@@ -24,5 +24,12 @@
     <Folder Include="Services\" />
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
+    <Folder Include="Mappings\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Mappings\UserModel.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\UserModel.hbm.xml" />
   </ItemGroup>
 </Project>
