--- a/API/API.csproj
+++ b/API/API.csproj
@@ -32,4 +32,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Mappings\UserModel.hbm.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="hibernate.cfg.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
