Creates wallet and user rows in database

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -34,6 +34,7 @@
     <None Remove="Mappings\LoginModel.hbm.xml" />
     <None Remove="Mappings\CreateUserModel.hbm.xml" />
     <None Remove="Mappings\LoginModel %28copy%29.hbm.xml" />
+    <None Remove="Mappings\UserWalletModel.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mappings\LoginModel.hbm.xml">
@@ -43,6 +44,7 @@
     <EmbeddedResource Include="Mappings\TransModel.hbm.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Mappings\UserWalletModel.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Update="hibernate.cfg.xml">
