--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -35,5 +35,8 @@
     <None Update="Mappings\UserSession.hbm.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="hibernate.cfg.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
