--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Mappings\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Mappings\UserSession.hbm.xml">
