--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -36,6 +36,7 @@
     <Folder Include="Mappings\" />
     <Folder Include="Entities\" />
     <Folder Include="Services\" />
+    <Folder Include="Entities\IEXModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Mappings\UserSession.hbm.xml">
