--- a/fantasy_stock_trader.Tests/fantasy_stock_trader.Tests.csproj
+++ b/fantasy_stock_trader.Tests/fantasy_stock_trader.Tests.csproj
@@ -13,4 +13,14 @@
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\API\API.csproj" />
+  </ItemGroup>
 </Project>
