--- a/fantasy_stock_trader.Tests/fantasy_stock_trader.Tests.csproj
+++ b/fantasy_stock_trader.Tests/fantasy_stock_trader.Tests.csproj
@@ -11,10 +11,12 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Services\" />
+    <None Remove="NSubstitute" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
