--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,6 +8,7 @@
     <None Remove="Mappings\CreateUserModel.hbm.xml" />
     <None Remove="Mappings\TransModel.hbm.xml" />
     <None Remove="Mappings\UserWalletModel.hbm.xml" />
+    <None Remove="DbServices\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mappings\User.hbm.xml">
@@ -26,6 +27,7 @@
     <Folder Include="Services\" />
     <Folder Include="IEXModels\" />
     <Folder Include="Models\" />
+    <Folder Include="DbServices\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Mappings\UserSession.hbm.xml">
