--- a/.github/workflows/main_fantasystocktrader.yml
+++ b/.github/workflows/main_fantasystocktrader.yml
@@ -23,6 +23,12 @@ jobs:
       with:
         dotnet-version: '5.0.x'
 
+    - name: npm install 
+      run: npm i --prefix API/client
+  
+    - name: npm build 
+      run: npm run build --prefix API/client
+      
     - name: Build with dotnet
       run: dotnet build --configuration Release
 
